- Lowered the Magery skill required for each circle. - Readjusted the weapon damage and speed for throwing weapons. - Lowered the attack speed of the tsuki wolf and yamandon. - When applying Benson's oil to an item, it will now retain the color. - Added some missing reagents to the Sell Bag checks. - Protection from Paralyzation potion works again. This was an objtype migration problem. - Cleaned up the scripts for essence of fire/frost potions. - Some more preparations for implementing the new crafting menus on blacksmithy.cfg - New crafting menus now give you the choice of a crafted item's desired quality. - Made the Upgrade Options available to the tailoring menu when crafting the new armors. - Migrated the Tinkering skill to the new crafting system. - Added the .gp command for getting individual CProps from items.

--- a/099/pkg/combat/weapons/itemdesc.cfg
+++ b/099/pkg/combat/weapons/itemdesc.cfg
@@ -1663,8 +1663,8 @@ Weapon 0x27f5
 {
 	Name				dartthrower
 	desc				dart thrower
-	Speed			40
-	Damage			2d6+18
+	Speed			50
+	Damage			4d6
 	Attribute			Throwing
 	Projectile		1
 	ProjectileType		0x2804
@@ -1691,7 +1691,7 @@ Weapon 0x2790
 	Name				shurikenthrower
 	desc				shuriken thrower
 	Speed			40
-	Damage			2d6+18
+	Damage			5d6
 	Attribute			Throwing
 	Projectile		1
 	ProjectileType		0x27ac
@@ -1717,8 +1717,8 @@ Weapon 0x27db
 {
 	Name				axethrower
 	desc				axe thrower
-	Speed			40
-	Damage			2d6+18
+	Speed			30
+	Damage			6d6
 	Attribute			Throwing
 	Projectile		1
 	ProjectileType		0x255d
