--- a/099/pkg/skills/craftingskills/crafting/config/craftConfig.cfg
+++ b/099/pkg/skills/craftingskills/crafting/config/craftConfig.cfg
@@ -57,8 +57,8 @@ Crafting Alchemy
 	Name		Alchemy
 	Attribute	Alchemy
  
-	CraftDelay	3
-	CraftLoops	4
+	CraftDelay	1
+	CraftLoops	1
 	CraftAnim	0x0021
 	CraftSound	0x0243
 	CraftCreate	0x0241
@@ -79,16 +79,17 @@ Crafting Blacksmithy
 	Name		Blacksmithy
 	Attribute	Blacksmithy
  
-	CraftDelay	2
-	CraftLoops	6
+	CraftDelay	1
+	CraftLoops	1
 	CraftAnim	0xB
 	CraftSound	0x002b
  
 	Repair		1
-	Fortify		0
-	Smelt		1
+	Fortify		1
+	Smelt		0
 	MakersMark	1
 	RetainColor	1
+	Quality	1
  
 	MenuFile	:blacksmithy:SmithMenu
 	ExceptionalName	Crafted by
@@ -100,8 +101,8 @@ Crafting BowcraftFletching
 	Name		Bowcraft
 	Attribute	BowcraftFletching
  
-	CraftDelay	4
-	CraftLoops	3
+	CraftDelay	1
+	CraftLoops	1
 	CraftAnim	0x0021
 	CraftSound	0x5A
  
@@ -110,6 +111,7 @@ Crafting BowcraftFletching
 	Smelt		0
 	MakersMark	1
 	RetainColor	1
+	Quality	1
  
 	MenuFile	:bowcraft:FletchMenu
 	ExceptionalName	Fletched by
@@ -121,16 +123,17 @@ Crafting Carpentry
 	Name		Carpentry
 	Attribute	Carpentry
  
-	CraftDelay	3
-	CraftLoops	4
+	CraftDelay	1
+	CraftLoops	1
 	CraftAnim	0x0021
 	CraftSound	0x23E
  
 	Repair		1
 	Fortify		1
 	Smelt		0
-	MakersMark	0
+	MakersMark	1
 	RetainColor	1
+	Quality	1
  
 	MenuFile	:woodworking:CarpMenu
 	ExceptionalName	Crafted by
@@ -142,8 +145,8 @@ Crafting Cartography
 	Name		Cartography
 	Attribute	Cartography
  
-	CraftDelay	4
-	CraftLoops	3
+	CraftDelay	1
+	CraftLoops	1
 	CraftAnim	0x0021
 	CraftSound	0x24a
  
@@ -163,8 +166,8 @@ Crafting cooking
 	Name		Cooking
 	Attribute	Cooking
  
-	CraftDelay	3
-	CraftLoops	4
+	CraftDelay	1
+	CraftLoops	1
 	CraftAnim	0x0021
  
 	Repair		0
@@ -183,16 +186,17 @@ Crafting Tailoring
 	Name		Tailoring
 	Attribute	Tailoring
  
-	CraftDelay	4
-	CraftLoops	3
+	CraftDelay	1
+	CraftLoops	1
 	CraftAnim	0x0021
 	CraftSound      0x0249
  
 	Repair		1
 	Fortify		1
 	Smelt		0
-	MakersMark	0
+	MakersMark	1
 	RetainColor	1
+	Quality	1
  
 	MenuFile	:tailoring:TailMenu
 	ExceptionalName	Tailored by
@@ -204,15 +208,16 @@ Crafting Tinkering
 	Name		Tinkering
 	Attribute	Tinkering
  
-	CraftDelay	2
-	CraftLoops	6
+	CraftDelay	1
+	CraftLoops	1
 	CraftAnim	0xB
  
 	Repair		1
-	Fortify		0
+	Fortify		1
 	Smelt		0
 	MakersMark	1
 	RetainColor	1
+	Quality	1
 
 	MenuFile	:tinkering:TinkMenu
 	ExceptionalName	Tinkered by
