--- a/099/pkg/skills/craftingskills/tailoring/menu.cfg
+++ b/099/pkg/skills/craftingskills/tailoring/menu.cfg
@@ -206,6 +206,7 @@ Item hide_armor
 
 Item ninja_gear
 {
+	show_upgrade_options	1
 	Entry	0x27de	Leather Ninja Jacket
 	Entry	0x27dc	Leather Ninja Pants
 	Entry	0x27dd	Leather Ninja Mitts
@@ -217,6 +218,7 @@ Item ninja_gear
 
 Item leather_yoroi
 {
+	show_upgrade_options	1
 	Entry	0x27c6	Leather Do
 	Entry	0x27d1	Leather Suneate
 	Entry	0x27d5	Leather Haidate
@@ -228,6 +230,7 @@ Item leather_yoroi
 
 Item studded_yoroi
 {
+	show_upgrade_options	1
 	Entry	0x27c7	Studded Do
 	Entry	0x27d2	Studded Suneate
 	Entry	0x27d6	Studded Haidate
