--- a/099/pkg/skills/craftingskills/tinkering/config/tinkering.cfg
+++ b/099/pkg/skills/craftingskills/tinkering/config/tinkering.cfg
@@ -264,9 +264,10 @@ tinkeritem 0x09ed
 tinkeritem 0x1059
 {
 	name			sextant parts
-	material		1
+	parts			0x1051 0x1055 1 1
 	skill		65
 	stackable		1
+	Assemble		1
 }
 
 
@@ -556,7 +557,7 @@ tinkeritem 0x1225
 
 tinkeritem 0x1226
 {
-	name			a statue
+	name			a gargoyle statue
 	material		50
 	type			stone
 	skill		50
@@ -572,7 +573,7 @@ tinkeritem 0x1227
 
 tinkeritem 0x1228
 {
-	name			a statue
+	name			a pegasus statue
 	material		70
 	type			stone
 	skill		60
@@ -634,6 +635,7 @@ tinkeritem 0x181d
 {
 	name			an alchemical symbol
 	material		20
+	type			clay
 	skill		80
 }
 
@@ -641,6 +643,7 @@ tinkeritem 0x181e
 {
 	name			an alchemical symbol
 	material		20
+	type			clay
 	skill		80
 }
 
@@ -648,6 +651,15 @@ tinkeritem 0x181f
 {
 	name			an alchemical symbol
 	material		20
+	type			clay
+	skill		80
+}
+
+tinkeritem 0x1820
+{
+	name			an alchemical symbol
+	material		20
+	type			clay
 	skill		80
 }
 
@@ -655,6 +667,7 @@ tinkeritem 0x1821
 {
 	name			an alchemical symbol
 	material		20
+	type			clay
 	skill		80
 }
 
@@ -662,6 +675,7 @@ tinkeritem 0x1822
 {
 	name			an alchemical symbol
 	material		20
+	type			clay
 	skill		80
 }
 
@@ -669,6 +683,7 @@ tinkeritem 0x1823
 {
 	name			an alchemical symbol
 	material		20
+	type			clay
 	skill		80
 }
 
@@ -676,6 +691,7 @@ tinkeritem 0x1824
 {
 	name			an alchemical symbol
 	material		20
+	type			clay
 	skill		80
 }
 
@@ -683,6 +699,7 @@ tinkeritem 0x1825
 {
 	name			an alchemical symbol
 	material		20
+	type			clay
 	skill		80
 }
 
@@ -690,6 +707,7 @@ tinkeritem 0x1826
 {
 	name			an alchemical symbol
 	material		20
+	type			clay
 	skill		80
 }
 
@@ -697,6 +715,7 @@ tinkeritem 0x1827
 {
 	name			an alchemical symbol
 	material		20
+	type			clay
 	skill		80
 }
 
@@ -704,6 +723,7 @@ tinkeritem 0x1828
 {
 	name			an alchemical symbol
 	material		20
+	type			clay
 	skill		80
 }
 
@@ -716,7 +736,7 @@ tinkeritem 0x1828
 
 tinkeritem 0x0DF2
 {
-	Name 		wand
+	Name 		ankh wand
 	material		25
 	type			gold
 	skill		75
@@ -724,7 +744,7 @@ tinkeritem 0x0DF2
 
 tinkeritem 0x0DF3
 {
-	Name 		wand
+	Name 		fork wand
 	material		25
 	type			gold
 	skill		75
@@ -732,7 +752,7 @@ tinkeritem 0x0DF3
 
 tinkeritem 0x0DF4
 {
-	Name			wand
+	Name			cross wand
 	material		25
 	type			gold
 	skill		75
@@ -740,7 +760,7 @@ tinkeritem 0x0DF4
 
 tinkeritem 0x0DF5
 {
-	Name			wand
+	Name			circle wand
 	material		25
 	type			gold
 	skill		75
@@ -748,7 +768,7 @@ tinkeritem 0x0DF5
 
 tinkeritem 0x1085
 {
-	name			necklace
+	name			beads necklace
 	material		8
 	type			gold
 	skill		70
@@ -772,7 +792,7 @@ tinkeritem 0x1087
 
 tinkeritem 0x1088
 {
-	name			necklace
+	name			necklace with stone
 	material		8
 	type			gold
 	skill		70
@@ -780,7 +800,7 @@ tinkeritem 0x1088
 
 tinkeritem 0x1089
 {
-	name			necklace
+	name			golden necklace
 	material		8
 	type			gold
 	skill		70
@@ -806,19 +826,22 @@ tinkeritem 0x104c
 	name			a clock
 	parts			0x104e 0x104f 1 1
 	skill		60
+	Assemble 1
 }
 
 tinkeritem 0x1057
 {
 	name			a sextant
-	material		1
+	parts			0x1059 0x105b 1 1
 	skill		70
+	Assemble	1
 }
 
 tinkeritem 0x1ebc
 {
 	name			tinker's tools
-	material		20 
+	material		20
+	type			metal
 	skill		80
 }
 
@@ -850,4 +873,137 @@ tinkeritem 0x255d
 	stackable		1
 }
 
+///////////
+// lighting
+///////////
+tinkering 0x24bc
+{ 
+	Name			a shoji lantern
+	Type			wood
+	material		20
+	skill		65
+	time			6
+	retain		0
+	mark			1
+}
+
+tinkering 0x24be
+{ 
+	Name			a paper lantern
+	Type			wood
+	material		20
+	skill		65
+	time			6
+	retain		0
+	mark			1
+}
+
+tinkering 0x24c0
+{ 
+	Name			a statue lantern
+	Type			wood
+	material		20
+	skill		65
+	time			6
+	retain		0
+	mark			1
+}
+
+tinkering 0x24c2
+{ 
+	Name			a red hanging lantern
+	Type			wood
+	material		20
+	skill		65
+	time			6
+	retain		0
+	mark			1
+}
+
+tinkering 0x24c6
+{ 
+	Name			a white hanging lantern
+	Type			wood
+	material		20
+	skill		65
+	time			6
+	retain		0
+	mark			1
+}
+
+tinkering 0x24ca
+{ 
+	Name			a round paper lantern
+	Type			wood
+	material		20
+	skill		65
+	time			6
+	retain		0
+	mark			1
+}
+
+
+////////////
+// Obsidian/Porcelain Totems
+////////////
+
+tinkering 0x20d7
+{
+	Name		an obsidian golem
+	Type		obsidian
+	material	200
+	skill		90
+	skill2	Magery
+	Difficulty2		90
+}
+
+tinkering 0x2121
+{
+	Name		an obsidian steed
+	Type		obsidian
+	material	200
+	skill		90
+	skill2	Magery
+	Difficulty2		90
+}
+
+tinkering 0x211f
+{
+	Name		a porcelain steed
+	Type		porcelain
+	material	200
+	skill		90
+	skill2	Magery
+	Difficulty2		90
+}
+
+tinkering 0x20f6
+{
+	Name		an obsidian llama
+	Type		obsidian
+	material	200
+	skill		90
+	skill2	Magery
+	Difficulty2		90
+}
+
+tinkering 0x2136
+{
+	Name		an obsidian ostard
+	Type		obsidian
+	material	200
+	skill		90
+	skill2	Magery
+	Difficulty2		90
+}
+
+tinkering 0x170b6
+{
+	Name		a totem repair kit
+	Type		obsidian or porcelain
+	material	200
+	skill		90
+	skill2	Magery
+	Difficulty2		90
+}
 
