--- a/099/pkg/skills/craftingskills/blacksmithy/blacksmithy.cfg
+++ b/099/pkg/skills/craftingskills/blacksmithy/blacksmithy.cfg
@@ -21,6 +21,7 @@ blacksmithy 0xB013
 {
 	name			lamppost deed
 	material		100
+	type			metal
 	skill		90
 	time			4
 	hasquality	0
@@ -38,6 +39,7 @@ blacksmithy 0xa054
 {
 	name			a toy soldier
 	material		20
+	type			metal
 	skill		250
 	time			4
 	hasquality	0
@@ -49,6 +51,7 @@ blacksmithy 0xa055
 {
 	name			a toy soldier
 	material		20
+	type			metal
 	skill		250
 	time			4
 	hasquality	0
@@ -60,6 +63,7 @@ blacksmithy 0xa056
 {
 	name			a toy soldier
 	material		20
+	type			metal
 	skill		250
 	time			4
 	hasquality	0
@@ -71,6 +75,7 @@ blacksmithy 0xa057
 {
 	name			a toy soldier
 	material		20
+	type			metal
 	skill		250
 	time			4
 	hasquality	0
@@ -82,6 +87,7 @@ blacksmithy 0xa058
 {
 	name			a toy soldier
 	material		20
+	type			metal
 	skill		250
 	time			4
 	hasquality	0
@@ -99,6 +105,7 @@ blacksmithy 0X0f51
 { 
 	Name			dagger
 	material		10
+	type			metal
 	skill		30
 	time			2
 	hasquality	1
@@ -109,6 +116,7 @@ blacksmithy 0x13f6
 { 
 	Name			butcher knife
 	material		10
+	type			metal
 	skill		30
 	time			2
 	hasquality	1
@@ -119,6 +127,7 @@ blacksmithy 0x0ec4
 { 
 	Name			skinning knife
 	material		10
+	type			metal
 	skill		30
 	time			2
 	hasquality	1
@@ -129,6 +138,7 @@ blacksmithy 0x0ec2
 { 
 	Name			cleaver
 	material		10
+	type			metal
 	skill		30
 	time			2
 	hasquality	1
@@ -139,6 +149,7 @@ blacksmithy 0x0f43
 {
 	name			hatchet
 	material		10
+	type			metal
 	skill		40
 	time			2
 	hasquality	1
@@ -156,6 +167,7 @@ blacksmithy 0X0f5e
 { 
 	Name			broadsword
 	material		30
+	type			metal
 	skill		65
 	time			4
 	hasquality	1
@@ -166,6 +178,7 @@ blacksmithy 0X1440
 { 
 	Name			cutlass
 	material		30
+	type			metal
 	skill		65
 	time			4
 	hasquality	1
@@ -176,6 +189,7 @@ blacksmithy 0X13fe
 { 
 	Name			katana
 	material		30
+	type			metal
 	skill		65
 	time			4
 	hasquality	1
@@ -186,6 +200,7 @@ blacksmithy 0X0f60
 { 
 	Name			longsword
 	material		30
+	type			metal
 	skill		65
 	time			4
 	hasquality	1
@@ -196,6 +211,7 @@ blacksmithy 0X13b5
 { 
 	Name			scimitar
 	material		30
+	type			metal
 	skill		65
 	time			4
 	hasquality	1
@@ -213,6 +229,7 @@ blacksmithy 0X1401
 { 
 	Name			kryss
 	material		30
+	type			metal
 	skill		65
 	time			4
 	hasquality	1
@@ -223,6 +240,7 @@ blacksmithy 0X13b7
 { 
 	Name			rapier
 	material		30
+	type			metal
 	skill		65
 	time			4
 	hasquality	1
@@ -233,6 +251,7 @@ blacksmithy 0x1404
 { 
 	Name			war fork
 	material		30
+	type			metal
 	skill		65
 	time			4
 	hasquality	1
@@ -250,6 +269,7 @@ blacksmithy 0x13af
 { 
 	Name			war axe
 	material		30
+	type			metal
 	skill		65
 	time			4
 	hasquality	1
@@ -260,6 +280,7 @@ blacksmithy 0X0f5c
 { 
 	Name			mace
 	material		30
+	type			metal
 	skill		65
 	time			4
 	hasquality	1
@@ -270,6 +291,7 @@ blacksmithy 0X143a
 { 
 	Name			maul
 	material		30
+	type			metal
 	skill		65
 	time			4
 	hasquality	1
@@ -280,6 +302,7 @@ blacksmithy 0x143c
 { 
 	Name			hammer pick
 	material		30
+	type			metal
 	skill		65
 	time			4
 	hasquality	1
@@ -296,6 +319,7 @@ blacksmithy 0X13b9
 { 
 	Name			viking sword
 	material		40
+	type			metal
 	skill		85
 	time			5
 	hasquality	1
@@ -306,6 +330,7 @@ blacksmithy 0x0f49
 {
 	Name			axe
 	material		40
+	type			metal
 	skill		85
 	time			5
 	hasquality	1
@@ -316,6 +341,7 @@ blacksmithy 0x0f47
 { 
 	Name			battle axe
 	material		40
+	type			metal
 	skill		85
 	time			5
 	hasquality	1
@@ -326,6 +352,7 @@ blacksmithy 0x0f4b
 { 
 	Name			double axe
 	material		40
+	type			metal
 	skill		85
 	time			5
 	hasquality	1
@@ -336,6 +363,7 @@ blacksmithy 0x0f45
 { 
 	Name			executioner's axe
 	material		40
+	type			metal
 	skill		85
 	time			5
 	hasquality	1
@@ -346,6 +374,7 @@ blacksmithy 0x13fa
 { 
 	Name			large battle axe
 	material		40
+	type			metal
 	skill		85
 	time			5
 	hasquality	1
@@ -356,6 +385,7 @@ blacksmithy 0x1442
 { 
 	Name			two handed axe
 	material		40
+	type			metal
 	skill		85
 	time			5
 	hasquality	1
@@ -366,6 +396,7 @@ blacksmithy 0x0f4e
 { 
 	Name			bardiche
 	material		40
+	type			metal
 	skill		85
 	time			5
 	hasquality	1
@@ -376,6 +407,7 @@ blacksmithy 0X143e
 { 
 	Name			halberd
 	material		40
+	type			metal
 	skill		85
 	time			5
 	hasquality	1
@@ -392,6 +424,7 @@ blacksmithy 0X1402
 { 
 	Name			short spear
 	material		40
+	type			metal
 	skill		85
 	time			5
 	hasquality	1
@@ -402,6 +435,7 @@ blacksmithy 0x0f63
 { 
 	Name			spear
 	material		40
+	type			metal
 	skill		85
 	time			5
 	hasquality	1
@@ -412,6 +446,7 @@ blacksmithy 0x0e87
 { 
 	Name			pitchfork
 	material		40
+	type			metal
 	skill		85
 	time			5
 	hasquality	1
@@ -429,6 +464,7 @@ blacksmithy 0x1438
 { 
 	Name			war hammer
 	material		40
+	type			metal
 	skill		85
 	time			5
 	hasquality	1
@@ -439,6 +475,7 @@ blacksmithy 0X1406
 { 
 	Name			war mace
 	material		40
+	type			metal
 	skill		85
 	time			5
 	hasquality	1
@@ -456,6 +493,7 @@ blacksmithy 0X13ec
 { 
 	Name			ringmail tunic 
 	material		30
+	type			metal
 	skill		50
 	time			4
 	hasquality	1
@@ -466,6 +504,7 @@ blacksmithy 0X13f0
 { 
 	Name			ringmail leggings
 	material		25
+	type			metal
 	skill		45
 	time			4
 	hasquality	1
@@ -476,6 +515,7 @@ blacksmithy 0X13ee
 { 
 	Name			ringmail sleeves
 	material		20
+	type			metal
 	skill		35
 	time			4
 	hasquality	1
@@ -486,6 +526,7 @@ blacksmithy 0x1708c
 {
 	Name			ringmail coif
 	material		15
+	type			metal
 	skill		30
 	time			4
 	hasquality	1
@@ -496,6 +537,7 @@ blacksmithy 0x13f2
 { 
 	Name			ringmail gloves
 	material		15
+	type			metal
 	skill		30
 	time			4
 	hasquality	1
@@ -513,6 +555,7 @@ blacksmithy 0x13bf
 { 
 	Name			chainmail tunic
 	material		45
+	type			metal
 	skill		75
 	time			5
 	hasquality	1
@@ -523,6 +566,7 @@ blacksmithy 0x13c3
 { 
 	Name			chainmail leggings
 	material		40
+	type			metal
 	skill		70
 	time			5
 	hasquality	1
@@ -533,6 +577,7 @@ blacksmithy 0x13be
 { 
 	Name			chainmail leggings
 	material		40
+	type			metal
 	skill		70
 	time			5
 	hasquality	1
@@ -543,6 +588,7 @@ blacksmithy 0x13bb
 { 
 	Name			chainmail coif
 	material		20
+	type			metal
 	skill		65
 	time			5
 	hasquality	1
@@ -553,6 +599,7 @@ blacksmithy 0x17066
 { 
 	Name			chainmail gloves
 	material		20
+	type			metal
 	skill		65
 	time			5
 	hasquality	1
@@ -570,6 +617,7 @@ blacksmithy 0x1415
 { 
 	Name			platemail
 	material		60
+	type			metal
 	skill		90
 	time			6
 	hasquality	1
@@ -580,6 +628,7 @@ blacksmithy 0x1c04
 { 
 	Name			plate armor
 	material		60
+	type			metal
 	skill		90
 	time			6
 	hasquality	1
@@ -590,6 +639,7 @@ blacksmithy 0x1411
 { 
 	Name			platemail legs
 	material		50
+	type			metal
 	skill		85
 	time			6
 	hasquality	1
@@ -600,6 +650,7 @@ blacksmithy 0x1410
 { 
 	Name			platemail arms
 	material		35
+	type			metal
 	skill		80
 	time			6
 	hasquality	1
@@ -610,6 +661,7 @@ blacksmithy 0x1414
 { 
 	Name			platemail gloves
 	material		25
+	type			metal
 	skill		75
 	time			6
 	hasquality	1
@@ -620,6 +672,7 @@ blacksmithy 0X1413
 { 
 	Name			platemail gorget
 	material		25
+	type			metal
 	skill		75
 	time			6
 	hasquality	1
@@ -637,6 +690,7 @@ blacksmithy 0X1b73
 { 
 	Name			buckler
 	material		20
+	type			metal
 	skill		40
 	time			3
 	hasquality	1
@@ -647,6 +701,7 @@ blacksmithy 0X1b72
 { 
 	Name			bronze shield
 	material		30
+	type			metal
 	skill		50
 	time			4
 	hasquality	1
@@ -657,6 +712,7 @@ blacksmithy 0X1b7b
 { 
 	Name			metal shield
 	material		30
+	type			metal
 	skill		50
 	time			4
 	hasquality	1
@@ -667,6 +723,7 @@ blacksmithy 0X1b76
 { 
 	Name			heater shield
 	material		50
+	type			metal
 	skill		70
 	time			5
 	hasquality	1
@@ -677,6 +734,7 @@ blacksmithy 0X1b74
 { 
 	Name			kite shield
 	material		50
+	type			metal
 	skill		70
 	time			5
 	hasquality	1
@@ -694,6 +752,7 @@ blacksmithy 0x140a
 { 
 	Name			helmet
 	material		20
+	type			metal
 	skill		50
 	time			3
 	hasquality	1
@@ -704,6 +763,7 @@ blacksmithy 0x140c
 { 
 	Name			bascinet
 	material		25
+	type			metal
 	skill		50
 	time			3
 	hasquality	1
@@ -714,6 +774,7 @@ blacksmithy 0x1408
 { 
 	Name			close helm
 	material		30
+	type			metal
 	skill		50
 	time			4
 	hasquality	1
@@ -724,6 +785,7 @@ blacksmithy 0x140e
 { 
 	Name			nose helm
 	material		30
+	type			metal
 	skill		50
 	time			4
 	hasquality	1
@@ -734,6 +796,7 @@ blacksmithy 0x1412
 { 
 	Name			plate helm
 	material		40
+	type			metal
 	skill		80
 	time			5
 	hasquality	1
@@ -749,6 +812,7 @@ blacksmithy 0X26ba
 { 
 	Name			scythe
 	material		40
+	type			metal
 	skill		85
 	time			5
 	hasquality	1
@@ -759,6 +823,7 @@ blacksmithy 0X26bb
 { 
 	Name			bone harvester
 	material		30
+	type			metal
 	skill		65
 	time			4
 	hasquality	1
@@ -769,6 +834,7 @@ blacksmithy 0x26bc
 { 
 	Name			scepter
 	material		30
+	type			metal
 	skill		65
 	time			4
 	hasquality	1
@@ -779,6 +845,7 @@ blacksmithy 0X26bd
 { 
 	Name			bladed staff
 	material		40
+	type			metal
 	skill		85
 	time			5
 	hasquality	1
@@ -789,6 +856,7 @@ blacksmithy 0x26be
 { 
 	Name			pike
 	material		40
+	type			metal
 	skill		85
 	time			5
 	hasquality	1
@@ -799,6 +867,7 @@ blacksmithy 0x26bf
 { 
 	Name			double bladed staff
 	material		40
+	type			metal
 	skill		85
 	time			5
 	hasquality	1
@@ -809,6 +878,7 @@ blacksmithy 0x26c0
 { 
 	Name			lance
 	material		30
+	type			metal
 	skill		65
 	time			4
 	hasquality	1
@@ -819,6 +889,7 @@ blacksmithy 0X26c1
 { 
 	Name			crescent blade
 	material		40
+	type			metal
 	skill		85
 	time			5
 	hasquality	1
@@ -829,6 +900,7 @@ blacksmithy 0X26ce
 { 
 	Name			paladin sword
 	material		40
+	type			metal
 	skill		85
 	time			5
 	hasquality	1
@@ -845,6 +917,7 @@ blacksmithy 0x27a4
 { 
 	Name			wakizashi
 	material		30
+	type			metal
 	skill		65
 	time			4
 	hasquality	1
@@ -855,6 +928,7 @@ blacksmithy 0x27a2
 { 
 	Name			Nodachi
 	material		40
+	type			metal
 	skill		85
 	time			5
 	hasquality	1
@@ -865,6 +939,7 @@ blacksmithy 0x27a3
 { 
 	Name			tessen
 	material		40
+	type			metal
 	skill		85
 	time			5
 	hasquality	1
@@ -875,6 +950,7 @@ blacksmithy 0x27a7
 { 
 	Name			lajatang
 	material		40
+	type			metal
 	skill		85
 	time			5
 	hasquality	1
@@ -885,6 +961,7 @@ blacksmithy 0X27a9
 { 
 	Name			daisho
 	material		40
+	type			metal
 	skill		85
 	time			5
 	hasquality	1
@@ -895,6 +972,7 @@ blacksmithy 0X27ab
 { 
 	Name			tekagi
 	material		40
+	type			metal
 	skill		85
 	time			5
 	hasquality	1
@@ -905,6 +983,7 @@ blacksmithy 0X27ad
 { 
 	Name			kama
 	material		40
+	type			metal
 	skill		85
 	time			5
 	hasquality	1
@@ -915,6 +994,7 @@ blacksmithy 0X27af
 { 
 	Name			sai
 	material		40
+	type			metal
 	skill		85
 	time			5
 	hasquality	1
@@ -926,6 +1006,7 @@ blacksmithy 0x27c8
 { 
 	Name			plate do
 	material		60
+	type			metal
 	skill		90
 	time			6
 	hasquality	1
@@ -936,6 +1017,7 @@ blacksmithy 0x27d3
 { 
 	Name			plate suneate
 	material		50
+	type			metal
 	skill		85
 	time			6
 	hasquality	1
@@ -946,6 +1028,7 @@ blacksmithy 0x27d8
 { 
 	Name			plate haidate
 	material		50
+	type			metal
 	skill		85
 	time			6
 	hasquality	1
@@ -956,6 +1039,7 @@ blacksmithy 0x27cb
 { 
 	Name			plate hiro sode
 	material		35
+	type			metal
 	skill		80
 	time			6
 	hasquality	1
@@ -966,6 +1050,7 @@ blacksmithy 0X27c4
 { 
 	Name			plate mempo
 	material		25
+	type			metal
 	skill		75
 	time			6
 	hasquality	1
@@ -976,6 +1061,7 @@ blacksmithy 0x27d0
 { 
 	Name			plate kabuto
 	material		40
+	type			metal
 	skill		80
 	time			5
 	hasquality	1
@@ -986,6 +1072,7 @@ blacksmithy 0x236c
 { 
 	Name			plate kabuto
 	material		40
+	type			metal
 	skill		80
 	time			5
 	hasquality	1
@@ -996,6 +1083,7 @@ blacksmithy 0x27cc
 { 
 	Name			plate jingasa
 	material		40
+	type			metal
 	skill		80
 	time			5
 	hasquality	1
@@ -1006,6 +1094,7 @@ blacksmithy 0x2777
 { 
 	Name			plate jingasa
 	material		40
+	type			metal
 	skill		80
 	time			5
 	hasquality	1
@@ -1016,6 +1105,7 @@ blacksmithy 0x27bf
 { 
 	Name			mail hatsuburi
 	material		20
+	type			metal
 	skill		65
 	time			5
 	hasquality	1
@@ -1026,6 +1116,7 @@ blacksmithy 0x27c0
 { 
 	Name			plate hatsuburi
 	material		40
+	type			metal
 	skill		80
 	time			5
 	hasquality	1
@@ -1042,6 +1133,7 @@ blacksmithy 0x2b6e
 { 
 	Name			circlet
 	material		15
+	type			metal
 	skill		50
 	time			3
 	hasquality	1
@@ -1052,6 +1144,7 @@ blacksmithy 0x2b6f
 { 
 	Name			royal circlet
 	material		15
+	type			metal
 	skill		50
 	time			3
 	hasquality	1
@@ -1062,6 +1155,7 @@ blacksmithy 0x2b70
 { 
 	Name			gemmed circlet
 	material		15
+	type			metal
 	skill		50
 	time			3
 	hasquality	1
@@ -1073,6 +1167,7 @@ blacksmithy 0x2d2c
 { 
 	Name			spellblade
 	material		40
+	type			metal
 	skill		85
 	time			5
 	hasquality	1
@@ -1083,6 +1178,7 @@ blacksmithy 0x2d2d
 { 
 	Name			assassin spike
 	material		10
+	type			metal
 	skill		30
 	time			2
 	hasquality	1
@@ -1093,6 +1189,7 @@ blacksmithy 0x2d2e
 { 
 	Name			leafblade
 	material		30
+	type			metal
 	skill		65
 	time			4
 	hasquality	1
@@ -1103,6 +1200,7 @@ blacksmithy 0x2d2f
 { 
 	Name			war cleaver
 	material		30
+	type			metal
 	skill		65
 	time			4
 	hasquality	1
@@ -1113,6 +1211,7 @@ blacksmithy 0x2d30
 { 
 	Name			diamond mace
 	material		30
+	type			metal
 	skill		65
 	time			4
 	hasquality	1
@@ -1123,6 +1222,7 @@ blacksmithy 0X2d32
 { 
 	Name			rune blade
 	material		40
+	type			metal
 	skill		85
 	time			5
 	hasquality	1
@@ -1133,6 +1233,7 @@ blacksmithy 0x2d33
 { 
 	Name			radiant scimitar
 	material		30
+	type			metal
 	skill		65
 	time			4
 	hasquality	1
@@ -1143,6 +1244,7 @@ blacksmithy 0X2d34
 { 
 	Name			ornate axe
 	material		40
+	type			metal
 	skill		85
 	time			5
 	hasquality	1
@@ -1153,6 +1255,7 @@ blacksmithy 0x2d35
 { 
 	Name			elven machete
 	material		30
+	type			metal
 	skill		65
 	time			4
 	hasquality	1
@@ -1168,6 +1271,7 @@ blacksmithy 0x4052
 { 
 	Name			platemail chest
 	material		70
+	type			metal
 	skill		90
 	time			6
 	hasquality	1
@@ -1178,6 +1282,7 @@ blacksmithy 0x4056
 { 
 	Name			platemail leggings
 	material		50
+	type			metal
 	skill		85
 	time			6
 	hasquality	1
@@ -1188,6 +1293,7 @@ blacksmithy 0x4054
 { 
 	Name			platemail kilt
 	material		65
+	type			metal
 	skill		85
 	time			6
 	hasquality	1
@@ -1198,6 +1304,7 @@ blacksmithy 0x4050
 { 
 	Name			platemail arms
 	material		50
+	type			metal
 	skill		80
 	time			6
 	hasquality	1
@@ -1208,6 +1315,7 @@ blacksmithy 0x42de
 { 
 	Name			plate talons
 	material		25
+	type			metal
 	skill		75
 	time			6
 	hasquality	1
@@ -1219,6 +1327,7 @@ blacksmithy 0X4202
 { 
 	Name			small plate shield
 	material		20
+	type			metal
 	skill		40
 	time			3
 	hasquality	1
@@ -1229,6 +1338,7 @@ blacksmithy 0X4203
 { 
 	Name			medium plate shield
 	material		30
+	type			metal
 	skill		50
 	time			4
 	hasquality	1
@@ -1239,6 +1349,7 @@ blacksmithy 0X4204
 { 
 	Name			large plate shield
 	material		50
+	type			metal
 	skill		70
 	time			5
 	hasquality	1
@@ -1252,6 +1363,7 @@ blacksmithy 0X406a
 { 
 	Name			gargish dagger
 	material		10
+	type			metal
 	skill		30
 	time			2
 	hasquality	1
@@ -1262,6 +1374,7 @@ blacksmithy 0X48ae
 { 
 	Name			gargish cleaver
 	material		10
+	type			metal
 	skill		30
 	time			2
 	hasquality	1
@@ -1272,6 +1385,7 @@ blacksmithy 0X48b6
 { 
 	Name			gargish butcher knife
 	material		10
+	type			metal
 	skill		30
 	time			2
 	hasquality	1
@@ -1282,6 +1396,7 @@ blacksmithy 0x4068
 { 
 	Name			dual short axes
 	material		40
+	type			metal
 	skill		85
 	time			5
 	hasquality	1
@@ -1292,6 +1407,7 @@ blacksmithy 0X48cc
 { 
 	Name			gargish tessen
 	material		40
+	type			metal
 	skill		85
 	time			5
 	hasquality	1
@@ -1302,6 +1418,7 @@ blacksmithy 0X48ce
 { 
 	Name			gargish tekagi
 	material		40
+	type			metal
 	skill		85
 	time			5
 	hasquality	1
@@ -1312,6 +1429,7 @@ blacksmithy 0X48d0
 { 
 	Name			gargish daisho
 	material		40
+	type			metal
 	skill		85
 	time			5
 	hasquality	1
@@ -1322,6 +1440,7 @@ blacksmithy 0X4067
 { 
 	Name			boomerang
 	material		20
+	type			metal
 	skill		50
 	time			3
 	hasquality	1
@@ -1332,6 +1451,7 @@ blacksmithy 0X406c
 { 
 	Name			cyclone
 	material		30
+	type			metal
 	skill		65
 	time			4
 	hasquality	1
@@ -1343,6 +1463,7 @@ blacksmithy 0X406e
 { 
 	Name			disc mace
 	material		30
+	type			metal
 	skill		65
 	time			4
 	hasquality	1
@@ -1353,6 +1474,7 @@ blacksmithy 0X4072
 { 
 	Name			bloodblade
 	material		30
+	type			metal
 	skill		65
 	time			4
 	hasquality	1
@@ -1363,6 +1485,7 @@ blacksmithy 0X4074
 { 
 	Name			dread sword
 	material		30
+	type			metal
 	skill		65
 	time			4
 	hasquality	1
@@ -1373,6 +1496,7 @@ blacksmithy 0X4076
 { 
 	Name			shortblade
 	material		30
+	type			metal
 	skill		65
 	time			4
 	hasquality	1
@@ -1383,6 +1507,7 @@ blacksmithy 0X48ba
 { 
 	Name			gargish katana
 	material		30
+	type			metal
 	skill		65
 	time			4
 	hasquality	1
@@ -1393,6 +1518,7 @@ blacksmithy 0X48bc
 { 
 	Name			gargish kryss
 	material		30
+	type			metal
 	skill		65
 	time			4
 	hasquality	1
@@ -1403,6 +1529,7 @@ blacksmithy 0X48be
 { 
 	Name			gargish war fork
 	material		30
+	type			metal
 	skill		65
 	time			4
 	hasquality	1
@@ -1413,6 +1540,7 @@ blacksmithy 0X48c2
 { 
 	Name			gargish maul
 	material		30
+	type			metal
 	skill		65
 	time			4
 	hasquality	1
@@ -1423,6 +1551,7 @@ blacksmithy 0X48c6
 { 
 	Name			gargish bone harvester
 	material		30
+	type			metal
 	skill		65
 	time			4
 	hasquality	1
@@ -1433,6 +1562,7 @@ blacksmithy 0X48ca
 { 
 	Name			gargish lance
 	material		30
+	type			metal
 	skill		65
 	time			4
 	hasquality	1
@@ -1444,6 +1574,7 @@ blacksmithy 0X406b
 { 
 	Name			soul glaive
 	material		40
+	type			metal
 	skill		85
 	time			5
 	hasquality	1
@@ -1454,6 +1585,7 @@ blacksmithy 0X406d
 { 
 	Name			dual pointed spear
 	material		40
+	type			metal
 	skill		85
 	time			5
 	hasquality	1
@@ -1464,6 +1596,7 @@ blacksmithy 0X4075
 { 
 	Name			gargish talwar
 	material		40
+	type			metal
 	skill		85
 	time			5
 	hasquality	1
@@ -1474,6 +1607,7 @@ blacksmithy 0X48b0
 { 
 	Name			gargish battle axe
 	material		40
+	type			metal
 	skill		85
 	time			5
 	hasquality	1
@@ -1484,6 +1618,7 @@ blacksmithy 0X48b2
 { 
 	Name			gargish axe
 	material		40
+	type			metal
 	skill		85
 	time			5
 	hasquality	1
@@ -1494,6 +1629,7 @@ blacksmithy 0X48b4
 { 
 	Name			gargish bardiche
 	material		40
+	type			metal
 	skill		85
 	time			5
 	hasquality	1
@@ -1504,6 +1640,7 @@ blacksmithy 0X48c0
 { 
 	Name			gargish war hammer
 	material		40
+	type			metal
 	skill		85
 	time			5
 	hasquality	1
@@ -1514,6 +1651,7 @@ blacksmithy 0X48c4
 { 
 	Name			gargish scythe
 	material		40
+	type			metal
 	skill		85
 	time			5
 	hasquality	1
@@ -1524,6 +1662,7 @@ blacksmithy 0X48c8
 { 
 	Name			gargish pike
 	material		40
+	type			metal
 	skill		85
 	time			5
 	hasquality	1
