--- a/099/pkg/skills/craftingskills/tinkering/config/TinkMenu.cfg
+++ b/099/pkg/skills/craftingskills/tinkering/config/TinkMenu.cfg
@@ -30,183 +30,176 @@ Craftitem Index
 	Skill	Tinkering
 	SkillID	Tinkering
 
-	Group   Containers
-	Group   Decoration
-	Group	Equipment
-	Group   Furniture
-	Group	Lightning
-	Group	Magic
-	Group	Others
+	Group	Assemblies
+	Group	Miscelaneous
 	Group	Parts
 	Group	Tools
+	Group	Utensils
+	Group	Clay
+	Group	Magic
 }
 
-Craftitem Containers
+Craftitem Assemblies
 {
-	//Sub Selections
-	Item    MetalChestDeed
-	Item    StrongBox
+	Item	Axleandgears
+	Item	Clockparts
+	Item	Sextantparts
+	Item	Clock
+	Item	Sextant
+//	Item	Skullcandle
 }
 
-Craftitem Decoration
+CraftItem Miscelaneous
 {
-	//Sub Selections
-	Item    Basin
-	Item    Brazier
-	Item    Bust
-	Item    Cauldron
-	Item    CeramicMug
-	Item    Clock
-	Item    CrystalBall
-	Item    EmptyFlask
-	Item    EmptyFlask2
-	Item    EmptyPhial
-	Item    EmptyVials
-	Item    Frypan
-	Item    Glass
-	Item    GlassMugs
-	Item    GlassPitcher
-	Item    Globe
-	Item    Goblet
-	Item    Hourglass
-	Item    Kettle
-	Item    Plate
-	Item    smvase
-	Item    lvase
-	Item    SmallFlowerPot
-	Item    LargeflowerPot
-	Item    Pedestal
-	Item    Scales
-	Item    Shipmodel
-	Item    Silverware
-	Item    Statue
-	Item    StatueCreature
-	Item    StatueFemale
-	Item    StatueGriffin
-	Item    StatueMale
-	Item    Tankards
-	Item    TarotCards
- 	Item    Telescope
-	Item    WigStand
-}
-
-Craftitem Equipment
-{
-	//Sub Selections
-	Item	ButcherKnife
-	Item    Cleaver
-	Item    Hatchet
-	Item    Pitchfork
-	Item	SkinningKnife
-	Item    Bracelet
-	Item    Earrings
-	Item    Necklace1
-	Item    Ring
-}
-
-Craftitem Furniture
-{
-	//Sub Selections
-	Item	abbatoirdeed
-	Item	anvildeed
-	Item	dipdeed
-	Item	dummiedeed
-	Item	flourmilldeed
-	Item	smallforgedeed
-	Item	largeforgedeed
-	Item	loomdeed
-	Item	pentagramdeed
-	Item	stonefireplacedeed
-	Item	stoneovendeed
-	Item	sandstonefireplacedeed
-	Item	sandstoneovendeed
-}
-
-Craftitem Lightning
-{
-	//Sub Selections
-	Item    Candle
-	Item    SmallCandelabra
-	Item    Candelabra
-	Item    Lantern
-	Item    WallSconce
-	Item    SkullCandle
-}
-
-Craftitem Magic
-{
-	//Sub Selections
-	Item    alchSymbol1
-	Item    alchSymbol2
-	Item    alchSymbol3
-	Item    alchSymbol4
-	Item    alchSymbol5
-	Item    alchSymbol6
-	Item    alchSymbol7
-	Item    alchSymbol8
-	Item    alchSymbol9
-	Item    alchSymbol10
-	Item    alchSymbol11
-}
-
-Craftitem Others
-{
-	//Sub Selections
-	Item    BlankScroll
-	Item    BlankMap
-	Item    EmptyBottle
-	Item    CopperKey
-	Item    GoldKey
-	Item    IronKey
-	Item    KeyRing
-	Item    RecallRune
-	Item    Spellbook
-	Item    PotionKeg
-	Item    Dyetub
+	Item	MetalChest
+	Item	StrongBox
+	Item	CopperKey
+	Item	GoldKey
+	Item	IronKey
+	Item	KeyRing
+	Item	Spyglass
+	Item	HeatingStand
+	Item	lantern
+	Item	ShojiLantern
+	Item	PaperLantern
+	Item	RoundPaperLantern
+	Item	StatueLantern
+	Item	ElvenGlasses
+	Item	Dart
+	Item	Shuriken
+	Item	ThrowingAxe
 }
 
 Craftitem Parts
 {
 	//Sub Selections
-	Item    Axle
-	Item    Axleandgears
-	Item    BarrelHoops
-	Item    BarrelTap
-	Item    ClockFrame
-	Item    ClockParts
-	Item    DippingStick
-	Item    FlaskStand
+	Item	Axle
 	Item	Gears
 	Item	Hinge
-	Item    SextantParts
-	Item    Springs
+	Item	Springs
+	Item	Axleandgears
+	Item	ClockParts
+	Item	SextantParts
 }
 
 Craftitem Tools
 {
 	//Sub Selections
+	Item	ButcherKnife
+	Item	Cleaver
+	Item	SkinningKnife
+	Item	Hatchet
+	Item	Pitchfork
+	
+	Item	TinkersTools
+	Item	Scissors
+	Item	SewingKit
+
+	Item	Smithyhammer
+	Item	SledgeHammer
+	Item	Tongs
+
+	Item	Shovel
+	Item	Pickaxe
+	
 	Item	DovetailSaw
 	Item	DrawKnife
 	Item	Froe
 	Item	Hammer
-	Item    HeatingStand
 	Item	Inshave
-	Item	JointingPlane
-	Item	Lockpick
-	Item    MalletChisel
-	Item    Mortar
-	Item    MouldingPlane
-	Item    Pickaxe
 	Item	Saw
-	Item	Scissors
 	Item	Scorp
-	Item    Sextant
-	Item	SewingKit
-	Item	Shovel
-	Item	SledgeHammer
-	Item	Smithhammer
-	Item    SmoothingPlane
-	Item    TinkersTools
-	Item	Tongs
-	Item    Dyes
+	Item	JointingPlane
+	Item	MouldingPlane
+	Item	SmoothingPlane
+	Item	DippingStick
+	Item	WoodenBowl
+
+	Item	Lockpicks
+	Item	Sextant
+	
+	Item	Kettle
+	Item	FryingPan
+	
+//	Item    MalletChisel
+//	Item    Mortar
+
+}
+
+Craftitem Utensils
+{
+	Item	butcherknife
+	Item	cleaver
+	Item	skinningknife
+	Item	silverware
+	Item	plate
+	Item	mug
+	Item	goblet
+	Item	spittoon
+	Item	emptybottle
+	Item	emptyglass
+	Item	emptypitcher
+	Item	WoodenBowl
+	Item	Kettle
+	Item	FryingPan
+//	Item	flask
+	
+}
+
+Craftitem Magic
+{
+	//Sub Selections
+	Item	golemtotem
+	Item	llamatotem
+	Item	steed1totem
+	Item	steed2totem
+	Item	ostardtotem
+	Item	totemrepairkit
+	Item	Bracelet
+	Item	Earrings
+	Item	Necklace
+	Item	Necklace2
+	Item	Necklace3
+	Item	Ring
+	Item	Wand1
+	Item	Wand2
+	Item	Wand3
+	Item	Wand4
+	Item	crystalball
+
+	Item	obsidian
+	Item	porcelain
+	Item    housetele1
+	Item    housetele2
+	Item    housetele3
+	Item    housetele4
+	Item    housetele5
+	Item    housetele6
+	Item    housetele7
+	Item    housetele8
+	Item    housetele9
+	Item    housetelea
+	Item    houseteleb
+	Item    housetelec
+}
+
+Craftitem Clay
+{
+	//Sub Selections
+	Item	mug
+	Item	plate
+	Item	smallvase
+	Item	smallvase2
+	Item	largevase
+	Item	largevase2
+	Item	basin
+	Item	flowerpot
+	Item	largeflowerpot
+//	Item	statue1
+//	Item	statue2
+//	Item	statue3
+//	Item	statue4
+//	Item	statue5
+//	Item	bust
+	Item	Porcelain
 }
