--- a/099/pkg/skills/craftingskills/tinkering/config/tinkering.cfg
+++ b/099/pkg/skills/craftingskills/tinkering/config/tinkering.cfg
@@ -17,6 +17,7 @@ tinkeritem 0x1030
 	material		4
 	type			wood
 	skill		30
+	mark			1
 }
 
 tinkeritem 0x102c
@@ -25,6 +26,7 @@ tinkeritem 0x102c
 	material		4
 	type			wood
 	skill		30
+	mark			1
 }
 
 tinkeritem 0x1032
@@ -33,6 +35,7 @@ tinkeritem 0x1032
 	material		4
 	type			wood
 	skill		40
+	mark			1
 }
 
 tinkeritem 0x1428
@@ -42,6 +45,7 @@ tinkeritem 0x1428
 	type			wood
 	skill		30
 	stackable		1
+	mark			1
 }
 
 tinkeritem 0x15F8
@@ -50,6 +54,9 @@ tinkeritem 0x15F8
 	material		3
 	type			wood
 	skill		60
+	retains		0
+	Exceptional		0
+	mark			1
 }
 
 
@@ -65,6 +72,7 @@ tinkeritem 0x14f5
 	material		5
 	type			metal
 	skill		100
+	mark			1
 }
 
 tinkeritem 0x09d4
@@ -73,6 +81,7 @@ tinkeritem 0x09d4
 	material		5
 	type			metal
 	skill		90
+	mark			1
 }
 
 tinkeritem 0x1003
@@ -81,6 +90,7 @@ tinkeritem 0x1003
 	material		10
 	type			metal
 	skill		70
+	mark			1
 }
 
 tinkeritem 0x0a25
@@ -89,6 +99,7 @@ tinkeritem 0x0a25
 	material		25
 	type			metal
 	skill		80
+	mark			1
 }
 
 tinkeritem 0x1053
@@ -147,6 +158,7 @@ tinkeritem 0x0f9e
 	material		4
 	type			metal
 	skill		50
+	mark			1
 }
 
 tinkeritem 0x0f9d
@@ -155,6 +167,7 @@ tinkeritem 0x0f9d
 	material		2
 	type			metal
 	skill		30
+	mark			1
 }
 
 tinkeritem 0x0f39
@@ -163,6 +176,7 @@ tinkeritem 0x0f39
 	material		4
 	type			metal
 	skill		30
+	mark			1
 }
 
 tinkeritem 0x105d
@@ -180,6 +194,7 @@ tinkeritem 0x0fbb
 	material		4
 	type			metal
 	skill		50
+	mark			1
 }
 
 tinkeritem 0x097f
@@ -198,6 +213,7 @@ tinkeritem 0x0E40
 	type			metal
 	skill		85
 	lockable		1
+	mark			1
 }
 
 tinkeritem 0x0E41
@@ -207,6 +223,8 @@ tinkeritem 0x0E41
 	type			metal
 	skill		85
 	lockable		1
+	retains		1
+	mark			1
 }
 
 tinkeritem 0x0E80
@@ -216,6 +234,8 @@ tinkeritem 0x0E80
 	type			metal
 	skill		75
 	lockable		1
+	retains		1
+	mark			1
 }
 
 tinkeritem 0x10e4
@@ -224,6 +244,7 @@ tinkeritem 0x10e4
 	material		10
 	type			metal
 	skill		40
+	mark			1
 }
 
 tinkeritem 0x1051
@@ -259,6 +280,7 @@ tinkeritem 0x09ed
 	material		6
 	type			metal
 	skill		40
+	mark			1
 }
 
 tinkeritem 0x1059
@@ -283,6 +305,9 @@ tinkeritem 0x13f6
 	material		10
 	type			metal
 	skill		40
+	retains		1
+	Exceptional		1
+	mark			1
 }
 
 tinkeritem 0x0ec4
@@ -291,6 +316,9 @@ tinkeritem 0x0ec4
 	material		10
 	type			metal
 	skill		40
+	retains		1
+	Exceptional		1
+	mark			1
 }
 
 tinkeritem 0x0ec2
@@ -299,6 +327,9 @@ tinkeritem 0x0ec2
 	material		10
 	type			metal
 	skill		40
+	retains		1
+	Exceptional		1
+	mark			1
 }
 
 tinkeritem 0x0fb4
@@ -307,6 +338,9 @@ tinkeritem 0x0fb4
 	material		10
 	type			metal
 	skill		40
+	retains		1
+	Exceptional		1
+	mark			1
 }
 
 tinkeritem 0x13e3
@@ -315,6 +349,9 @@ tinkeritem 0x13e3
 	material		10
 	type			metal
 	skill		40
+	retains		1
+	Exceptional		1
+	mark			1
 }
 
 tinkeritem 0x0f43
@@ -323,6 +360,9 @@ tinkeritem 0x0f43
 	material		10
 	type			metal
 	skill		40
+	retains		1
+	Exceptional		1
+	mark			1
 }
 
 tinkeritem 0x0e85
@@ -331,6 +371,9 @@ tinkeritem 0x0e85
 	material		10
 	type			metal
 	skill		40
+	retains		1
+	Exceptional		1
+	mark			1
 }
 
 
@@ -346,6 +389,7 @@ tinkeritem 0x1028
 	material		4 
 	type			metal
 	skill		20
+	mark			1
 }
 
 tinkeritem 0x10e5
@@ -354,6 +398,7 @@ tinkeritem 0x10e5
 	material		2 
 	type			metal
 	skill		30
+	mark			1
 }
 
 tinkeritem 0x10e6
@@ -362,6 +407,7 @@ tinkeritem 0x10e6
 	material		2 
 	type			metal
 	skill		15
+	mark			1
 }
 
 tinkeritem 0x1034
@@ -370,6 +416,7 @@ tinkeritem 0x1034
 	material		4 
 	type			metal
 	skill		50
+	mark			1
 }
 
 tinkeritem 0x10e7
@@ -378,6 +425,7 @@ tinkeritem 0x10e7
 	material		2 
 	type			metal
 	skill		30
+	mark			1
 }
 
 tinkeritem 0x102a
@@ -386,6 +434,7 @@ tinkeritem 0x102a
 	material		4 
 	type			metal
 	skill		50
+	mark			1
 }
 
 
@@ -401,6 +450,7 @@ Item  0x09b3
 	material		4
 	type			glass
 	skill		50
+	mark			1
 }
 
 tinkeritem 0x1f81
@@ -409,6 +459,7 @@ tinkeritem 0x1f81
 	material		4
 	type			glass
 	skill		30
+	mark			1
 }
 
 tinkeritem 0x0f0e 
@@ -426,6 +477,7 @@ tinkeritem 0x1832
 	material		10
 	type			glass
 	skill		50
+	mark			1
 }
 
 tinkeritem 0x0e2d
@@ -434,6 +486,7 @@ tinkeritem 0x0e2d
 	material		20
 	type			glass
 	skill		70
+	mark			1
 }
 
 tinkeritem 0x09A7
@@ -442,6 +495,7 @@ tinkeritem 0x09A7
 	material		6
 	type			glass
 	skill		30
+	mark			1
 }
 
 tinkeritem 0x0f89
@@ -459,6 +513,8 @@ tinkeritem 0x2fb8
 	material		20
 	type			glass
 	skill		70
+	mark			1
+	Exceptional		1
 }
 
 
@@ -473,6 +529,7 @@ tinkeritem 0x0995
 	material		4
 	type			clay
 	skill		12
+	mark			1
 }
 
 tinkeritem 0x09d7
@@ -481,6 +538,7 @@ tinkeritem 0x09d7
 	material		8
 	type			clay
 	skill		15
+	mark			1
 }
 
 tinkeritem 0x0b46
@@ -489,6 +547,7 @@ tinkeritem 0x0b46
 	material		10
 	type			clay
 	skill		25
+	mark			1
 }
 
 tinkeritem 0x0b48
@@ -497,6 +556,7 @@ tinkeritem 0x0b48
 	material		10
 	type			clay
 	skill		25
+	mark			1
 }
 
 tinkeritem 0x0b45
@@ -505,6 +565,7 @@ tinkeritem 0x0b45
 	material		20
 	type			clay
 	skill		40
+	mark			1
 }
 
 tinkeritem 0x0b47
@@ -513,6 +574,7 @@ tinkeritem 0x0b47
 	material		20
 	type			clay
 	skill		40
+	mark			1
 }
 
 tinkeritem 0x1009
@@ -521,6 +583,7 @@ tinkeritem 0x1009
 	material		10
 	type			clay
 	skill		15
+	mark			1
 }
 
 tinkeritem 0x11c6
@@ -529,6 +592,7 @@ tinkeritem 0x11c6
 	material		10
 	type			clay
 	skill		12
+	mark			1
 }
 
 tinkeritem 0x11c7
@@ -537,6 +601,7 @@ tinkeritem 0x11c7
 	material		20
 	type			clay
 	skill		25
+	mark			1
 }
 
 tinkeritem 0x1224
@@ -545,6 +610,8 @@ tinkeritem 0x1224
 	material		50
 	type			stone
 	skill		50
+	retains		1
+	mark			1
 }
 
 tinkeritem 0x1225
@@ -553,6 +620,8 @@ tinkeritem 0x1225
 	material		50
 	type			stone
 	skill		50
+	retains		1
+	mark			1
 }
 
 tinkeritem 0x1226
@@ -561,6 +630,8 @@ tinkeritem 0x1226
 	material		50
 	type			stone
 	skill		50
+	retains		1
+	mark			1
 }
 
 tinkeritem 0x1227
@@ -569,6 +640,8 @@ tinkeritem 0x1227
 	material		50
 	type			stone
 	skill		50
+	retains		1
+	mark			1
 }
 
 tinkeritem 0x1228
@@ -577,6 +650,8 @@ tinkeritem 0x1228
 	material		70
 	type			stone
 	skill		60
+	retains		1
+	mark			1
 }
 
 tinkeritem 0x12ca
@@ -585,6 +660,8 @@ tinkeritem 0x12ca
 	material		50
 	type			stone
 	skill		45
+	retains		1
+	mark			1
 }
 
 tinkeritem 0xee21
@@ -827,6 +904,7 @@ tinkeritem 0x104c
 	parts			0x104e 0x104f 1 1
 	skill		60
 	Assemble 1
+	mark			1
 }
 
 tinkeritem 0x1057
@@ -835,6 +913,7 @@ tinkeritem 0x1057
 	parts			0x1059 0x105b 1 1
 	skill		70
 	Assemble	1
+	mark			1
 }
 
 tinkeritem 0x1ebc
@@ -843,6 +922,7 @@ tinkeritem 0x1ebc
 	material		20
 	type			metal
 	skill		80
+	mark			1
 }
 
 
