--- a/trunk/099/pkg/skills/craftingskills/tinkering/config/tinkering.cfg
+++ b/trunk/099/pkg/skills/craftingskills/tinkering/config/tinkering.cfg
@@ -54,7 +54,7 @@ tinkeritem 0x15F8
 	material		3
 	type			wood
 	skill		60
-	retains		0
+	retain		0
 	Exceptional		0
 	mark			1
 }
@@ -223,7 +223,7 @@ tinkeritem 0x0E41
 	type			metal
 	skill		85
 	lockable		1
-	retains		1
+	retain		1
 	mark			1
 }
 
@@ -234,7 +234,7 @@ tinkeritem 0x0E80
 	type			metal
 	skill		75
 	lockable		1
-	retains		1
+	retain		1
 	mark			1
 }
 
@@ -305,7 +305,7 @@ tinkeritem 0x13f6
 	material		10
 	type			metal
 	skill		40
-	retains		1
+	retain		1
 	Exceptional		1
 	mark			1
 }
@@ -316,7 +316,7 @@ tinkeritem 0x0ec4
 	material		10
 	type			metal
 	skill		40
-	retains		1
+	retain		1
 	Exceptional		1
 	mark			1
 }
@@ -327,7 +327,7 @@ tinkeritem 0x0ec2
 	material		10
 	type			metal
 	skill		40
-	retains		1
+	retain		1
 	Exceptional		1
 	mark			1
 }
@@ -338,7 +338,7 @@ tinkeritem 0x0fb4
 	material		10
 	type			metal
 	skill		40
-	retains		1
+	retain		1
 	Exceptional		1
 	mark			1
 }
@@ -349,7 +349,7 @@ tinkeritem 0x13e3
 	material		10
 	type			metal
 	skill		40
-	retains		1
+	retain		1
 	Exceptional		1
 	mark			1
 }
@@ -360,7 +360,7 @@ tinkeritem 0x0f43
 	material		10
 	type			metal
 	skill		40
-	retains		1
+	retain		1
 	Exceptional		1
 	mark			1
 }
@@ -371,7 +371,7 @@ tinkeritem 0x0e85
 	material		10
 	type			metal
 	skill		40
-	retains		1
+	retain		1
 	Exceptional		1
 	mark			1
 }
@@ -610,7 +610,7 @@ tinkeritem 0x1224
 	material		50
 	type			stone
 	skill		50
-	retains		1
+	retain		1
 	mark			1
 }
 
@@ -620,7 +620,7 @@ tinkeritem 0x1225
 	material		50
 	type			stone
 	skill		50
-	retains		1
+	retain		1
 	mark			1
 }
 
@@ -630,7 +630,7 @@ tinkeritem 0x1226
 	material		50
 	type			stone
 	skill		50
-	retains		1
+	retain		1
 	mark			1
 }
 
@@ -640,7 +640,7 @@ tinkeritem 0x1227
 	material		50
 	type			stone
 	skill		50
-	retains		1
+	retain		1
 	mark			1
 }
 
@@ -650,7 +650,7 @@ tinkeritem 0x1228
 	material		70
 	type			stone
 	skill		60
-	retains		1
+	retain		1
 	mark			1
 }
 
@@ -660,7 +660,7 @@ tinkeritem 0x12ca
 	material		50
 	type			stone
 	skill		45
-	retains		1
+	retain		1
 	mark			1
 }
 
