- Added preliminary context menu suppport. This will be refined as we go. - Merchants, Bankers and Stable Masters have working context menus. - NPCs now receive bonuses from Meditation and Focus for recovering Mana. - Added meditation to several Tokuno monsters. - The Rune Beetle and Bake Kitsune will now heal their owner while tamed.

--- a/099/pkg/npcs/hostiles/tokuno/npcdesc.cfg
+++ b/099/pkg/npcs/hostiles/tokuno/npcdesc.cfg
@@ -58,6 +58,7 @@ NpcTemplate bakekitsune
 	Magery			90
 	EvaluatingIntelligence	90	
 	Animallore			100
+	Meditation			95
 
 	spell	:druid_spells:stingingswarm
 	spell	:damage_spells:fstrike
@@ -75,6 +76,7 @@ NpcTemplate bakekitsune
 	virtue			3
 	tameskill			100
 	food				meat
+	istamedhealer		1
 	provoke			95
 	hostile			1
 	fire				strong
@@ -562,6 +564,7 @@ NpcTemplate oni
 	Magery			106
 	EvaluatingIntelligence	125
 	SpiritSpeak			100
+	Meditation			43
 
 
 	spell	:damage_spells:fstrike
@@ -613,6 +616,7 @@ NpcTemplate revenantlion
 	EvaluatingIntelligence	90
 	Poisoning			130
 	SpiritSpeak			120
+	Meditation			95
 
 	spell	:damage_spells:lightning
 	spell	:damage_spells:fireball
@@ -661,6 +665,7 @@ NpcTemplate runebeetle
 	EvaluatingIntelligence	125
 	Poisoning			140
 	SpiritSpeak			150
+	Meditation			110
 
 
 	spell	:damage_spells:fstrike
@@ -676,6 +681,7 @@ NpcTemplate runebeetle
 	virtue			3
 	tameskill			114
 	food				meat
+	istamedhealer		1
 	provoke			110
 	hostile			1
 	poison			immune
