- Started work on Stonecrafting. - Raised AR of gargish leather armor to 17. - Made some Line of Sight corrections to ranged combat scripts. - Added Line of Sight checks to Context Menus. - Added some new stone furniture. - Modified the Lockdown scripts to handle colored deed items. - Tooltips weren't displaying alchemy bonuses. Fixed. - Added some desc entries to all hairstyles. - Fixed an objtype migration error in player merchant release routine. - Added the Fiddle musical instrument - Stone can now be mined.

--- a/099/pkg/items/decorations/itemdesc.cfg
+++ b/099/pkg/items/decorations/itemdesc.cfg
@@ -1503,4 +1503,57 @@ Item 0x24d0
 }
 
 
+//////////////////
+// Stone items
+//////////////////
+
+Item 0x3dff
+{
+	Name				SmallStoneBench
+	script			rotate
+	VendorSellsFor		75
+	VendorBuysFor		20
+	Weight			2
+}
+
+Item 0x1218
+{
+	Name			StoneChair
+	script		rotate
+	VendorSellsFor	52
+	VendorBuysFor	25
+	Weight		2
+}
+
+Item  0xb01a
+{
+	Name			MediumStoneTableDeed
+	Desc			medium stone table deed
+	Graphic		0x14EF
+	Script		stoneitemdeed
+}
+
+Item  0xb01b
+{
+	Name			LargeStoneTableDeed
+	Desc			large stone table deed
+	Graphic		0x14EF
+	Script		stoneitemdeed
+}
+
+Item  0xb01c
+{
+	Name			MediumStoneBenchDeed
+	Desc			medium stone bench deed
+	Graphic		0x14EF
+	Script		stoneitemdeed
+}
+
+Item  0xb01d
+{
+	Name			LargeStoneBenchDeed
+	Desc			large stone bench deed
+	Graphic		0x14EF
+	Script		stoneitemdeed
+}
 
