--- a/099/pkg/skills/bardskills/musicianship/itemdesc.cfg
+++ b/099/pkg/skills/bardskills/musicianship/itemdesc.cfg
@@ -148,4 +148,15 @@ Item 0x403c
 	VendorBuysFor	48
 }
 
+Item 0x420c
+{
+	Name			fiddle
+	Desc			fiddle
+	script			musicianship
+	succeed		0x5b2
+	fail			0x5b1
+	VendorSellsFor	144
+	VendorBuysFor	48
+}
+
 
