--- a/099/pkg/skills/craftingskills/crafting/config/craftConfig.cfg
+++ b/099/pkg/skills/craftingskills/crafting/config/craftConfig.cfg
@@ -96,26 +96,26 @@ Crafting Blacksmithy
 	EndMessage	smithing
 }
 
-Crafting BowcraftFletching
+Crafting StoneCrafting
 {
-	Name		Bowcraft
-	Attribute	BowcraftFletching
+	Name		Stonecrafting
+	Attribute	Stonecrafting
  
 	CraftDelay	1
 	CraftLoops	1
 	CraftAnim	0x0021
-	CraftSound	0x5A
+	CraftSound	0x126
  
-	Repair		0
-	Fortify		0
+	Repair		1
+	Fortify		1
 	Smelt		0
 	MakersMark	1
 	RetainColor	1
 	Quality	1
  
-	MenuFile	:bowcraft:FletchMenu
-	ExceptionalName	Fletched by
-	EndMessage	fletching
+	MenuFile	:stonecrafting:StoneMenu
+	ExceptionalName	Crafted by
+	EndMessage	Stonecrafted
 }
 
 Crafting Carpentry
