--- a/099/pkg/skills/harvestingskills/mining/itemdesc.cfg
+++ b/099/pkg/skills/harvestingskills/mining/itemdesc.cfg
@@ -402,3 +402,123 @@ Item 0x1709a
 //	OldObjtype		0x709a
 }
 
+Item	0x16300
+{
+	Name			granitestone
+	desc			granite stone
+	Graphic		0x1779
+	Type			stone
+	Color		0x0
+	Weight		1
+}
+
+Item 0x16301
+{
+	Name			Bronzestone
+	Desc			bronze stone%s
+	Graphic		0x1779
+	Type			stone
+	Color		0x45e
+	Weight		1
+}
+
+Item 0x16302
+{
+	Name			DullCopperstone
+	Desc			dull copper stone%s
+	Graphic		0x1779
+	Type			stone
+	Color		0x3ea
+	Weight		1
+}
+
+Item 0x16303
+{
+	Name			Copperstone
+	Desc			copper stone%s
+	Graphic		0x1779
+	Type			stone
+	Color		0x602
+	Weight		1
+}
+
+Item 0x16304
+{
+	Name			Onyxstone
+	Desc			onyx stone%s
+	Graphic		0x1779
+	Type			stone
+	Color		0x455
+	Weight		1
+}
+
+Item 0x16305
+{
+	Name			Pyritestone
+	Desc			pyrite stone%s
+	Graphic		0x1779
+	Type			stone
+	Color		0x6b8
+	Weight		1
+}
+
+Item 0x16306
+{
+	Name			Malachitestone
+	Desc			malachite stone%s
+	Graphic		0x1779
+	Type			stone
+	Color		0x852
+	Weight		1
+}
+
+Item 0x16307
+{
+	Name			Azuritestone
+	Desc			azurite stone%s
+	Graphic		0x1779
+	Type			stone
+	Color		0x4df
+	Weight		1
+}
+
+Item 0x16308
+{
+	Name			BlueSteelstone
+	Desc			bluesteel stone%s
+	Graphic		0x1779
+	Type			stone
+	Color		1322
+	Weight		1
+}
+
+Item 0x16309
+{
+	Name			rubysteelstone
+	Desc			rubysteel stone%s
+	Graphic		0x1779
+	Type			stone
+	Color		1644
+	Weight		1
+}
+
+Item 0x1630a
+{
+	Name			sandstone
+	Desc			sandstone%s
+	Graphic		0x1779
+	Type			stone
+	Color		1169
+	Weight		1
+}
+
+Item 0x1630b
+{
+	Name			marblestone
+	Desc			marble stone%s
+	Graphic		0x1779
+	Type			stone
+	Color		2962
+	Weight		1
+}
+
